# SimpleNotes

./: package.json  pnpm-lock.yaml
src/: App.vue  config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: ColorPicker.vue
